removed flex from entry-container to stop spaces from jumping

--- a/css/styles.css
+++ b/css/styles.css
@@ -45,11 +45,6 @@ a {
   display: none;
 }
 
-.entry-form {
-  display: flex;
-  justify-content: center;
-}
-
 .img-preview {
   width: 100%;
   border-radius: 3px;
